[tool.poetry]
name = "fastapi-beanie"
version = "0.1.0"
description = ""
authors = ["Ahmed Nafies <ahmed.nafies@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_beanie"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
beanie = "^1.18.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
